--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -66,7 +66,7 @@ jobs:
       shell: bash
       run: |
         echo " We have a secret in repository"
-        echo " Value of secret ${{secret.EXPOSED_SECRET}}"
+        echo " Value of secret ${{secrets.EXPOSED_SECRET}}"
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
